tests/bom/bom.exp
Error ------------------------------------------------------------------------------------------------- FormData.js:5:14

Cannot call `FormData` with empty string bound to `form` because string [1] is incompatible with `HTMLFormElement` [2].

   FormData.js:5:14
     5| new FormData(''); // incorrect
                     ^^ [1]

References:
   <BUILTINS>/bom.js:331:24
   331|     constructor(form?: HTMLFormElement): void;
                               ^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- FormData.js:6:14

Cannot call `FormData` with `document.createElement(...)` bound to `form` because `HTMLInputElement` [1] is incompatible
with `HTMLFormElement` [2].

   FormData.js:6:14
     6| new FormData(document.createElement('input')); // incorrect
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/dom.js:749:36
   749|   createElement(tagName: 'input'): HTMLInputElement;
                                           ^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/bom.js:331:24
   331|     constructor(form?: HTMLFormElement): void;
                               ^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:14:19

Cannot assign `a.get(...)` to `d` because:
 - null or undefined [1] is incompatible with string [2].
 - `File` [3] is incompatible with string [2].

   FormData.js:14:19
    14| const d: string = a.get('foo'); // incorrect
                          ^^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:334:24
   334|     get(name: string): ?FormDataEntryValue;
                               ^^^^^^^^^^^^^^^^^^^ [1]
   FormData.js:14:10
    14| const d: string = a.get('foo'); // incorrect
                 ^^^^^^ [2]
   <BUILTINS>/bom.js:334:25
   334|     get(name: string): ?FormDataEntryValue;
                                ^^^^^^^^^^^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------ FormData.js:15:17

Cannot assign `a.get(...)` to `e` because:
 - null or undefined [1] is incompatible with `Blob` [2].
 - string [3] is incompatible with `Blob` [2].

   FormData.js:15:17
    15| const e: Blob = a.get('foo'); // incorrect
                        ^^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:334:24
   334|     get(name: string): ?FormDataEntryValue;
                               ^^^^^^^^^^^^^^^^^^^ [1]
   FormData.js:15:10
    15| const e: Blob = a.get('foo'); // incorrect
                 ^^^^ [2]
   <BUILTINS>/bom.js:334:25
   334|     get(name: string): ?FormDataEntryValue;
                                ^^^^^^^^^^^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- FormData.js:17:7

Cannot call `a.get` with `2` bound to `name` because number [1] is incompatible with string [2].

   FormData.js:17:7
    17| a.get(2); // incorrect
              ^ [1]

References:
   <BUILTINS>/bom.js:334:15
   334|     get(name: string): ?FormDataEntryValue;
                      ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:21:43

Cannot assign `a.getAll(...)` to `a2` because number [1] is incompatible with string [2] in array element.

   FormData.js:21:43
    21| const a2: Array<string | File | number> = a.getAll('foo'); // incorrect
                                                  ^^^^^^^^^^^^^^^

References:
   FormData.js:21:33
    21| const a2: Array<string | File | number> = a.getAll('foo'); // incorrect
                                        ^^^^^^ [1]
   <BUILTINS>/bom.js:328:27
   328| type FormDataEntryValue = string | File
                                  ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:22:41

Cannot assign `a.getAll(...)` to `a3` because `Blob` [1] is incompatible with `File` [2] in array element.

   FormData.js:22:41
    22| const a3: Array<string | Blob | File> = a.getAll('foo'); // incorrect
                                                ^^^^^^^^^^^^^^^

References:
   FormData.js:22:26
    22| const a3: Array<string | Blob | File> = a.getAll('foo'); // incorrect
                                 ^^^^ [1]
   <BUILTINS>/bom.js:328:36
   328| type FormDataEntryValue = string | File
                                           ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:23:10

Cannot call `a.getAll` with `23` bound to `name` because number [1] is incompatible with string [2].

   FormData.js:23:10
    23| a.getAll(23); // incorrect
                 ^^ [1]

References:
   <BUILTINS>/bom.js:335:18
   335|     getAll(name: string): Array<FormDataEntryValue>;
                         ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- FormData.js:27:1

Cannot call `a.set` because:
 - Either object literal [1] is incompatible with `Blob` [2].
 - Or object literal [1] is incompatible with `File` [3].

   FormData.js:27:1
    27| a.set('foo', {}); // incorrect
        ^^^^^^^^^^^^^^^^

References:
   FormData.js:27:14
    27| a.set('foo', {}); // incorrect
                     ^^ [1]
   <BUILTINS>/bom.js:338:30
   338|     set(name: string, value: Blob, filename?: string): void;
                                     ^^^^ [2]
   <BUILTINS>/bom.js:339:30
   339|     set(name: string, value: File, filename?: string): void;
                                     ^^^^ [3]


Error ------------------------------------------------------------------------------------------------- FormData.js:28:1

Cannot call `a.set` because:
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with string [3].
 - Or number [1] is incompatible with string [4].

   FormData.js:28:1
    28| a.set(2, 'bar'); // incorrect
        ^^^^^^^^^^^^^^^

References:
   FormData.js:28:7
    28| a.set(2, 'bar'); // incorrect
              ^ [1]
   <BUILTINS>/bom.js:337:15
   337|     set(name: string, value: string): void;
                      ^^^^^^ [2]
   <BUILTINS>/bom.js:338:15
   338|     set(name: string, value: Blob, filename?: string): void;
                      ^^^^^^ [3]
   <BUILTINS>/bom.js:339:15
   339|     set(name: string, value: File, filename?: string): void;
                      ^^^^^^ [4]


Error ------------------------------------------------------------------------------------------------- FormData.js:29:1

Cannot call `a.set` because:
 - Either string [1] is incompatible with `Blob` [2].
 - Or string [1] is incompatible with `File` [3].

   FormData.js:29:1
    29| a.set('foo', 'bar', 'baz'); // incorrect
        ^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   FormData.js:29:14
    29| a.set('foo', 'bar', 'baz'); // incorrect
                     ^^^^^ [1]
   <BUILTINS>/bom.js:338:30
   338|     set(name: string, value: Blob, filename?: string): void;
                                     ^^^^ [2]
   <BUILTINS>/bom.js:339:30
   339|     set(name: string, value: File, filename?: string): void;
                                     ^^^^ [3]


Error ------------------------------------------------------------------------------------------------- FormData.js:32:1

Cannot call `a.set` because:
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with string [3].

   FormData.js:32:1
    32| a.set('bar', new File([], 'q'), 2) // incorrect
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   FormData.js:32:33
    32| a.set('bar', new File([], 'q'), 2) // incorrect
                                        ^ [1]
   <BUILTINS>/bom.js:338:47
   338|     set(name: string, value: Blob, filename?: string): void;
                                                      ^^^^^^ [2]
   <BUILTINS>/bom.js:339:47
   339|     set(name: string, value: File, filename?: string): void;
                                                      ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- FormData.js:35:1

Cannot call `a.set` because number [1] is incompatible with string [2].

   FormData.js:35:1
    35| a.set('bar', new Blob, 2) // incorrect
        ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   FormData.js:35:24
    35| a.set('bar', new Blob, 2) // incorrect
                               ^ [1]
   <BUILTINS>/bom.js:338:47
   338|     set(name: string, value: Blob, filename?: string): void;
                                                      ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- FormData.js:39:1

Cannot call `a.append` because:
 - Either object literal [1] is incompatible with `Blob` [2].
 - Or object literal [1] is incompatible with `File` [3].

   FormData.js:39:1
    39| a.append('foo', {}); // incorrect
        ^^^^^^^^^^^^^^^^^^^

References:
   FormData.js:39:17
    39| a.append('foo', {}); // incorrect
                        ^^ [1]
   <BUILTINS>/bom.js:342:33
   342|     append(name: string, value: Blob, filename?: string): void;
                                        ^^^^ [2]
   <BUILTINS>/bom.js:343:33
   343|     append(name: string, value: File, filename?: string): void;
                                        ^^^^ [3]


Error ------------------------------------------------------------------------------------------------- FormData.js:40:1

Cannot call `a.append` because:
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with string [3].
 - Or number [1] is incompatible with string [4].

   FormData.js:40:1
    40| a.append(2, 'bar'); // incorrect
        ^^^^^^^^^^^^^^^^^^

References:
   FormData.js:40:10
    40| a.append(2, 'bar'); // incorrect
                 ^ [1]
   <BUILTINS>/bom.js:341:18
   341|     append(name: string, value: string): void;
                         ^^^^^^ [2]
   <BUILTINS>/bom.js:342:18
   342|     append(name: string, value: Blob, filename?: string): void;
                         ^^^^^^ [3]
   <BUILTINS>/bom.js:343:18
   343|     append(name: string, value: File, filename?: string): void;
                         ^^^^^^ [4]


Error ------------------------------------------------------------------------------------------------- FormData.js:41:1

Cannot call `a.append` because:
 - Either string [1] is incompatible with `Blob` [2].
 - Or string [1] is incompatible with `File` [3].

   FormData.js:41:1
    41| a.append('foo', 'bar', 'baz'); // incorrect
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   FormData.js:41:17
    41| a.append('foo', 'bar', 'baz'); // incorrect
                        ^^^^^ [1]
   <BUILTINS>/bom.js:342:33
   342|     append(name: string, value: Blob, filename?: string): void;
                                        ^^^^ [2]
   <BUILTINS>/bom.js:343:33
   343|     append(name: string, value: File, filename?: string): void;
                                        ^^^^ [3]


Error ------------------------------------------------------------------------------------------------- FormData.js:45:1

Cannot call `a.append` because:
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with string [3].

   FormData.js:45:1
    45| a.append('bar', new File([], 'q'), 2) // incorrect
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   FormData.js:45:36
    45| a.append('bar', new File([], 'q'), 2) // incorrect
                                           ^ [1]
   <BUILTINS>/bom.js:342:50
   342|     append(name: string, value: Blob, filename?: string): void;
                                                         ^^^^^^ [2]
   <BUILTINS>/bom.js:343:50
   343|     append(name: string, value: File, filename?: string): void;
                                                         ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- FormData.js:48:1

Cannot call `a.append` because number [1] is incompatible with string [2].

   FormData.js:48:1
    48| a.append('bar', new Blob, 2) // incorrect
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   FormData.js:48:27
    48| a.append('bar', new Blob, 2) // incorrect
                                  ^ [1]
   <BUILTINS>/bom.js:342:50
   342|     append(name: string, value: Blob, filename?: string): void;
                                                         ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:52:10

Cannot call `a.delete` with `3` bound to `name` because number [1] is incompatible with string [2].

   FormData.js:52:10
    52| a.delete(3); // incorrect
                 ^ [1]

References:
   <BUILTINS>/bom.js:345:18
   345|     delete(name: string): void;
                         ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:56:23

Cannot assign `x` to `x` because string [1] is incompatible with number [2].

   FormData.js:56:23
    56| for (let x: number of a.keys()) {} // incorrect
                              ^^^^^^^^

References:
   <BUILTINS>/bom.js:347:22
   347|     keys(): Iterator<string>;
                             ^^^^^^ [1]
   FormData.js:56:13
    56| for (let x: number of a.keys()) {} // incorrect
                    ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:64:52

Cannot assign for-of element to variable because `Blob` [1] is incompatible with `File` [2] in index 1.

   FormData.js:64:52
    64| for (let [x, y]: [string, string | File | Blob] of a.entries()) {} // incorrect
                                                           ^^^^^^^^^^^

References:
   FormData.js:64:43
    64| for (let [x, y]: [string, string | File | Blob] of a.entries()) {} // incorrect
                                                  ^^^^ [1]
   <BUILTINS>/bom.js:328:36
   328| type FormDataEntryValue = string | File
                                           ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:65:11

Cannot assign element 0 to `x` because string [1] is incompatible with number [2].

   FormData.js:65:11
    65| for (let [x, y]: [number, string] of a.entries()) {} // incorrect
                  ^

References:
   <BUILTINS>/bom.js:349:26
   349|     entries(): Iterator<[string, FormDataEntryValue]>;
                                 ^^^^^^ [1]
   FormData.js:65:19
    65| for (let [x, y]: [number, string] of a.entries()) {} // incorrect
                          ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:65:14

Cannot assign element 1 to `y` because `File` [1] is incompatible with string [2].

   FormData.js:65:14
    65| for (let [x, y]: [number, string] of a.entries()) {} // incorrect
                     ^

References:
   <BUILTINS>/bom.js:349:34
   349|     entries(): Iterator<[string, FormDataEntryValue]>;
                                         ^^^^^^^^^^^^^^^^^^ [1]
   FormData.js:65:27
    65| for (let [x, y]: [number, string] of a.entries()) {} // incorrect
                                  ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:65:38

Cannot assign for-of element to variable because:
 - string [1] is incompatible with number [2] in index 0.
 - `File` [3] is incompatible with string [4] in index 1.

   FormData.js:65:38
    65| for (let [x, y]: [number, string] of a.entries()) {} // incorrect
                                             ^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:349:26
   349|     entries(): Iterator<[string, FormDataEntryValue]>;
                                 ^^^^^^ [1]
   FormData.js:65:19
    65| for (let [x, y]: [number, string] of a.entries()) {} // incorrect
                          ^^^^^^ [2]
   <BUILTINS>/bom.js:349:34
   349|     entries(): Iterator<[string, FormDataEntryValue]>;
                                         ^^^^^^^^^^^^^^^^^^ [3]
   FormData.js:65:27
    65| for (let [x, y]: [number, string] of a.entries()) {} // incorrect
                                  ^^^^^^ [4]


Error ------------------------------------------------------------------------------------------------ FormData.js:66:14

Cannot assign element 1 to `y` because:
 - `File` [1] is incompatible with number [2].
 - string [1] is incompatible with number [2].

   FormData.js:66:14
    66| for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                     ^

References:
   <BUILTINS>/bom.js:349:34
   349|     entries(): Iterator<[string, FormDataEntryValue]>;
                                         ^^^^^^^^^^^^^^^^^^ [1]
   FormData.js:66:27
    66| for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                                  ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:66:38

Cannot assign for-of element to variable because:
 - `File` [1] is incompatible with number [2] in index 1.
 - string [1] is incompatible with number [2] in index 1.
 - number [2] is incompatible with string [3] in index 1.

   FormData.js:66:38
    66| for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                                             ^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:349:34
   349|     entries(): Iterator<[string, FormDataEntryValue]>;
                                         ^^^^^^^^^^^^^^^^^^ [1]
   FormData.js:66:27
    66| for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                                  ^^^^^^ [2]
   <BUILTINS>/bom.js:328:27
   328| type FormDataEntryValue = string | File
                                  ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------ FormData.js:67:11

Cannot assign element 0 to `x` because string [1] is incompatible with number [2].

   FormData.js:67:11
    67| for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                  ^

References:
   <BUILTINS>/bom.js:349:26
   349|     entries(): Iterator<[string, FormDataEntryValue]>;
                                 ^^^^^^ [1]
   FormData.js:67:19
    67| for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                          ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:67:14

Cannot assign element 1 to `y` because:
 - `File` [1] is incompatible with number [2].
 - string [1] is incompatible with number [2].

   FormData.js:67:14
    67| for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                     ^

References:
   <BUILTINS>/bom.js:349:34
   349|     entries(): Iterator<[string, FormDataEntryValue]>;
                                         ^^^^^^^^^^^^^^^^^^ [1]
   FormData.js:67:27
    67| for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                                  ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:67:38

Cannot assign for-of element to variable because:
 - string [1] is incompatible with number [2] in index 0.
 - `File` [3] is incompatible with number [4] in index 1.
 - string [3] is incompatible with number [4] in index 1.
 - number [4] is incompatible with string [5] in index 1.

   FormData.js:67:38
    67| for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                                             ^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:349:26
   349|     entries(): Iterator<[string, FormDataEntryValue]>;
                                 ^^^^^^ [1]
   FormData.js:67:19
    67| for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                          ^^^^^^ [2]
   <BUILTINS>/bom.js:349:34
   349|     entries(): Iterator<[string, FormDataEntryValue]>;
                                         ^^^^^^^^^^^^^^^^^^ [3]
   FormData.js:67:27
    67| for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                                  ^^^^^^ [4]
   <BUILTINS>/bom.js:328:27
   328| type FormDataEntryValue = string | File
                                  ^^^^^^ [5]


Error -------------------------------------------------------------------------------------------------- Headers.js:8:19

Cannot assign `headers.get(...)` to `b` because null [1] is incompatible with string [2].

   Headers.js:8:19
     8| const b: string = headers.get('foo'); // incorrect
                          ^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:980:24
   980|     get(name: string): null | string;
                               ^^^^ [1]
   Headers.js:8:10
     8| const b: string = headers.get('foo'); // incorrect
                 ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- MutationObserver.js:10:1

Cannot call `MutationObserver` because function [1] requires another argument.

   MutationObserver.js:10:1
    10| new MutationObserver(); // incorrect
        ^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:377:5
   377|     constructor(callback: (arr: Array<MutationRecord>, observer: MutationObserver) => any): void;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------- MutationObserver.js:11:22

Cannot call `MutationObserver` with `42` bound to `callback` because number [1] is incompatible with function type [2].

   MutationObserver.js:11:22
    11| new MutationObserver(42); // incorrect
                             ^^ [1]

References:
   <BUILTINS>/bom.js:377:27
   377|     constructor(callback: (arr: Array<MutationRecord>, observer: MutationObserver) => any): void;
                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- MutationObserver.js:12:22

Cannot call `MutationObserver` with function bound to `callback` because number [1] is incompatible with array type [2]
in the first argument.

   MutationObserver.js:12:22
    12| new MutationObserver((n: number) => {}); // incorrect
                             ^^^^^^^^^^^^^^^^^

References:
   MutationObserver.js:12:26
    12| new MutationObserver((n: number) => {}); // incorrect
                                 ^^^^^^ [1]
   <BUILTINS>/bom.js:377:33
   377|     constructor(callback: (arr: Array<MutationRecord>, observer: MutationObserver) => any): void;
                                        ^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- MutationObserver.js:18:1

Cannot call `o.observe` because:
 - function [1] requires another argument.
 - all branches are incompatible:
    - Either undefined [2] is incompatible with object type [3].
    - Or undefined [2] is incompatible with object type [4].
    - Or undefined [2] is incompatible with object type [5].

   MutationObserver.js:18:1
    18| o.observe(); // incorrect
        ^^^^^^^^^^^ [2]

References:
   <BUILTINS>/bom.js:378:5
   378|     observe(target: Node, options: MutationObserverInit): void;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/bom.js:365:7
   365|     | { childList: true }
              ^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/bom.js:366:7
   366|     | { attributes: true }
              ^^^^^^^^^^^^^^^^^^^^ [4]
   <BUILTINS>/bom.js:367:7
   367|     | { characterData: true }
              ^^^^^^^^^^^^^^^^^^^^^^^ [5]


Error ----------------------------------------------------------------------------------------- MutationObserver.js:19:1

Cannot call `o.observe` because:
 - function [1] requires another argument.
 - all branches are incompatible:
    - Either undefined [2] is incompatible with object type [3].
    - Or undefined [2] is incompatible with object type [4].
    - Or undefined [2] is incompatible with object type [5].

   MutationObserver.js:19:1
    19| o.observe('invalid'); // incorrect
        ^^^^^^^^^^^^^^^^^^^^ [2]

References:
   <BUILTINS>/bom.js:378:5
   378|     observe(target: Node, options: MutationObserverInit): void;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/bom.js:365:7
   365|     | { childList: true }
              ^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/bom.js:366:7
   366|     | { attributes: true }
              ^^^^^^^^^^^^^^^^^^^^ [4]
   <BUILTINS>/bom.js:367:7
   367|     | { characterData: true }
              ^^^^^^^^^^^^^^^^^^^^^^^ [5]


Error ---------------------------------------------------------------------------------------- MutationObserver.js:19:11

Cannot call `o.observe` with `'invalid'` bound to `target` because string [1] is incompatible with `Node` [2].

   MutationObserver.js:19:11
    19| o.observe('invalid'); // incorrect
                  ^^^^^^^^^ [1]

References:
   <BUILTINS>/bom.js:378:21
   378|     observe(target: Node, options: MutationObserverInit): void;
                            ^^^^ [2]


Error ----------------------------------------------------------------------------------------- MutationObserver.js:20:1

Cannot call `o.observe` because:
 - function [1] requires another argument.
 - all branches are incompatible:
    - Either undefined [2] is incompatible with object type [3].
    - Or undefined [2] is incompatible with object type [4].
    - Or undefined [2] is incompatible with object type [5].

   MutationObserver.js:20:1
    20| o.observe(div); // incorrect
        ^^^^^^^^^^^^^^ [2]

References:
   <BUILTINS>/bom.js:378:5
   378|     observe(target: Node, options: MutationObserverInit): void;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/bom.js:365:7
   365|     | { childList: true }
              ^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/bom.js:366:7
   366|     | { attributes: true }
              ^^^^^^^^^^^^^^^^^^^^ [4]
   <BUILTINS>/bom.js:367:7
   367|     | { characterData: true }
              ^^^^^^^^^^^^^^^^^^^^^^^ [5]


Error ---------------------------------------------------------------------------------------- MutationObserver.js:21:16

Cannot call `o.observe` with object literal bound to `options` because:
 - Either property `childList` is missing in object literal [1] but exists in object type [2].
 - Or property `attributes` is missing in object literal [1] but exists in object type [3].
 - Or property `characterData` is missing in object literal [1] but exists in object type [4].

   MutationObserver.js:21:16
    21| o.observe(div, {}); // incorrect
                       ^^ [1]

References:
   <BUILTINS>/bom.js:365:7
   365|     | { childList: true }
              ^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/bom.js:366:7
   366|     | { attributes: true }
              ^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/bom.js:367:7
   367|     | { characterData: true }
              ^^^^^^^^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------- MutationObserver.js:22:16

Cannot call `o.observe` with object literal bound to `options` because:
 - Either property `childList` is missing in object literal [1] but exists in object type [2].
 - Or property `attributes` is missing in object literal [1] but exists in object type [3].
 - Or property `characterData` is missing in object literal [1] but exists in object type [4].

   MutationObserver.js:22:16
    22| o.observe(div, { subtree: true }); // incorrect
                       ^^^^^^^^^^^^^^^^^ [1]

References:
   <BUILTINS>/bom.js:365:7
   365|     | { childList: true }
              ^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/bom.js:366:7
   366|     | { attributes: true }
              ^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/bom.js:367:7
   367|     | { characterData: true }
              ^^^^^^^^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------- MutationObserver.js:23:16

Cannot call `o.observe` with object literal bound to `options` because boolean [1] is incompatible with array type [2]
in property `attributeFilter`.

   MutationObserver.js:23:16
    23| o.observe(div, { attributes: true, attributeFilter: true }); // incorrect
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   MutationObserver.js:23:53
    23| o.observe(div, { attributes: true, attributeFilter: true }); // incorrect
                                                            ^^^^ [1]
   <BUILTINS>/bom.js:373:23
   373|     attributeFilter?: Array<string>;
                              ^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ URLSearchParams.js:8:19

Cannot assign `params.get(...)` to `b` because null [1] is incompatible with string [2].

   URLSearchParams.js:8:19
     8| const b: string = params.get('foo'); // incorrect
                          ^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:994:24
   994|     get(name: string): null | string;
                               ^^^^ [1]
   URLSearchParams.js:8:10
     8| const b: string = params.get('foo'); // incorrect
                 ^^^^^^ [2]



Found 54 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
